# dslib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Doxygen/: doxyfile  updateDoxygen.sh
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js
include/: dslib_error.h  dslib_list.h  dslib_macros.h  dslib_queue.h  dslib_stack.c  dslib_stack.h  dslib_typedefs.h  dslib_vector.c  dslib_vector.h
src/: dslib.h  dslib_graph.c  dslib_graph.h  dslib_list.c  dslib_list.h  dslib_queue.c  dslib_queue.h  dslib_slist.c  dslib_slist.h  dslib_stack.c  dslib_stack.h  dslib_vector.c
src/helper/: dslib_error.c  dslib_error.h  dslib_typedefs.h
test/: main.c  test_stack_int.c  test_stack_int.h  test_vector_int.c  test_vector_int.h
tests/: test.c  test_list.h
